# leaf

./: .gitignore  Cargo.toml
crates/leaf/: Cargo.toml
crates/leaf-boot/: Cargo.toml
crates/leaf-boot/src/: anti_dce.rs  app.rs  application.rs  assembly.rs  autoconfig.rs  conditions.rs  environment.rs  events.rs  lib.rs  lifecycle.rs  proxy.rs  scheduling.rs  validate.rs  wiring.rs
crates/leaf-boot/tests/: auto_config_contributed_bean.rs  auto_config_run_gating.rs  auto_wire.rs  component_run_gating.rs  end_to_end.rs  from_slices.rs  inject_constructor_precedence.rs  keepalive_lifecycle.rs  live_self_check.rs  refresh_walk.rs  resolve_walk.rs  run_wiring.rs  validate_walk.rs
crates/leaf-cache/: Cargo.toml
crates/leaf-cache/src/: advisor.rs  autoconfig.rs  interceptor.rs  lib.rs  manager.rs  value.rs
crates/leaf-cache/tests/: auto_advise.rs
crates/leaf-config/: Cargo.toml
crates/leaf-config/src/: configdata.rs  engine.rs  error.rs  flatten.rs  lib.rs  loader.rs  placeholder_engine.rs  precedence.rs
crates/leaf-config/tests/: file_line_origin.rs
crates/leaf-grpc/: Cargo.toml  build.rs
crates/leaf-grpc-build/: Cargo.toml  build.rs
crates/leaf-grpc-build/src/: lib.rs  service_gen.rs
crates/leaf-grpc-build/tests/: echo.proto  generated_service.rs
crates/leaf-grpc/proto/: reflection_v1.proto  reflection_v1alpha.proto
crates/leaf-grpc/src/: caller.rs  codec.rs  descriptor.rs  dispatch.rs  framing.rs  handler.rs  lib.rs  mapper.rs  status.rs  streaming.rs
crates/leaf-grpc/src/reflection/: index.rs  mod.rs  service.rs
crates/leaf-grpc/tests/: cross_cutting.rs  echo_controller.rs  grpc_controller_lowering.rs  grpc_di_assembly.rs  include_proto_macro.rs  reflected_fds_slice.rs  reflection_controllers.rs  reflection_over_h2.rs  reflection_protos_compile.rs  serves_grpc.rs
crates/leaf-grpc/tests/proto/: echo.proto
crates/leaf-i18n/: Cargo.toml
crates/leaf-i18n/src/: catalog.rs  format.rs  lib.rs  locale.rs  source.rs
crates/leaf-macros/: Cargo.toml
crates/leaf-macros/src/: lib.rs
crates/leaf-macros/tests/: advice_events_app.rs  by_trait_injection.rs  compile_fail.rs  config_conditional.rs  config_impl_app.rs  pairing_slices.rs  roundtrip.rs  stereotypes.rs
crates/leaf-macros/tests/ui/: advice_unknown_kind_is_a_hard_error.rs  advice_unknown_kind_is_a_hard_error.stderr  bean_with_self_receiver_is_deferred.rs  bean_with_self_receiver_is_deferred.stderr  cacheable_requires_a_name.rs  cacheable_requires_a_name.stderr  concern_outside_advisable_is_a_hard_error.rs  concern_outside_advisable_is_a_hard_error.stderr  conditional_unknown_kind_is_a_hard_error.rs  conditional_unknown_kind_is_a_hard_error.stderr  config_bean_self_call_is_a_hard_error.rs  config_bean_self_call_is_a_hard_error.stderr  config_properties_generic_is_a_hard_error.rs  config_properties_generic_is_a_hard_error.stderr  generic_aspect_is_a_hard_error.rs  generic_aspect_is_a_hard_error.stderr  generic_bean_factory_is_a_hard_error.rs  generic_bean_factory_is_a_hard_error.stderr  generic_component_is_a_hard_error.rs  generic_component_is_a_hard_error.stderr  inject_outside_advisable_is_a_hard_error.rs  inject_outside_advisable_is_a_hard_error.stderr  profile_mixed_operators_is_a_hard_error.rs  profile_mixed_operators_is_a_hard_error.stderr  scheduled_requires_a_trigger.rs  scheduled_requires_a_trigger.stderr  state_field_without_inject_ctor_is_not_injectable.rs  state_field_without_inject_ctor_is_not_injectable.stderr  unknown_stereotype_arg_is_a_hard_error.rs  unknown_stereotype_arg_is_a_hard_error.stderr
crates/leaf-redis/: Cargo.toml
crates/leaf-redis/src/: autoconfig.rs  client.rs  lib.rs  live.rs  manager.rs  properties.rs
crates/leaf-redis/tests/: auto_config_ladder.rs
crates/leaf-resilience/: Cargo.toml
crates/leaf-resilience/src/: advisor.rs  backoff.rs  concurrency.rs  lib.rs  retry.rs  template.rs
crates/leaf-resilience/tests/: auto_advise.rs
crates/leaf-serde/: Cargo.toml
crates/leaf-serde/src/: converter.rs  deserializer.rs  error.rs  http_converter.rs  lib.rs
crates/leaf-serde/tests/: bridge_coexists.rs
crates/leaf-starter-grpc/: Cargo.toml
crates/leaf-starter-grpc/src/: lib.rs
crates/leaf-starter-web/: Cargo.toml
crates/leaf-starter-web/src/: lib.rs
crates/leaf-tokio/: Cargo.toml
crates/leaf-tokio/src/: ambient.rs  availability.rs  dispatch.rs  exec.rs  lib.rs  resource.rs  scheduler.rs  shutdown.rs  sleeper.rs
crates/leaf-tx/: Cargo.toml
crates/leaf-tx/src/: advisor.rs  autoconfig.rs  interceptor.rs  lib.rs  manager.rs  propagation.rs  rollback.rs
crates/leaf-tx/tests/: auto_advise.rs
crates/leaf-web/: Cargo.toml
crates/leaf-web-hyper/: Cargo.toml
crates/leaf-web-hyper/src/: autoconfig.rs  lib.rs  server.rs
crates/leaf-web-hyper/tests/: auto_config_server.rs  serves_http.rs
crates/leaf-web/src/: advice.rs  body.rs  content.rs  embedded.rs  extract.rs  filter.rs  handler.rs  lib.rs  request.rs  response.rs  runner.rs  server.rs  testing.rs
crates/leaf-web/tests/: control_advice.rs  controller_routes.rs  dispatch_through_mock.rs  ui.rs  web_extension.rs  web_filter.rs
crates/leaf-web/tests/ui/: controller_stereotype_mismatch_is_a_hard_error.rs  controller_stereotype_mismatch_is_a_hard_error.stderr
crates/leaf/src/: forcelink.rs  lib.rs  prelude.rs  runtime.rs
crates/leaf/tests/: proof_app.rs  web_umbrella.rs
examples/hello/: Cargo.toml
examples/hello/src/: main.rs
examples/storefront/: Cargo.toml  build.rs
examples/storefront/proto/: catalog.proto
examples/storefront/src/: lib.rs  main.rs  tests.rs
examples/storefront/src/catalog/: catalog_service.rs  mod.rs  product_repository.rs  service.rs
examples/storefront/src/grpc/: catalog_controller.rs  mod.rs
examples/storefront/src/order/: mod.rs  repository.rs  service.rs
examples/storefront/src/orders/: mod.rs  order.rs  order_service.rs
examples/storefront/src/platform/: app_properties.rs  cache_manager.rs  mod.rs  startup_runner.rs  transaction_manager.rs
examples/storefront/src/web/: mod.rs  (+4 more)
examples/storefront/tests/: grpc.rs  grpc_reflection.rs  http.rs
(+180 files in other folders)
