[workspace]
resolver = "3"
# `examples/*` — downstream proof apps that depend on the umbrella ALONE (the
# headline DX: one `leaf` dependency + annotations). They are workspace members so
# `cargo test`/`cargo clippy --workspace` cover them, but they name NO internal
# `leaf-*` crate (only `leaf`), proving the umbrella-only contract end to end.
members = ["crates/*", "examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
# leaf — a Spring-Boot-4-class dependency-injection framework in idiomatic Rust.
# Design corpus: docs/ (research, charter, phase1..4). Build kernel-first: leaf-core.

# Internal BOM (TOPOLOGY.md): pins ONE version of every leaf-* crate, so there is
# exactly one copy of leaf-core (the single-AUTO_CONFIGS/COMPONENTS-slice invariant).
[workspace.dependencies]
leaf-core = { path = "crates/leaf-core", version = "0.1.0" }
leaf-macros = { path = "crates/leaf-macros", version = "0.1.0" }
leaf-codegen = { path = "crates/leaf-codegen", version = "0.1.0" }
leaf-config = { path = "crates/leaf-config", version = "0.1.0" }
leaf-conditions = { path = "crates/leaf-conditions", version = "0.1.0" }
leaf-aop-expr = { path = "crates/leaf-aop-expr", version = "0.1.0" }
leaf-boot = { path = "crates/leaf-boot", version = "0.1.0" }
leaf-tokio = { path = "crates/leaf-tokio", version = "0.1.0" }
leaf-smol = { path = "crates/leaf-smol", version = "0.1.0" }
leaf-cron = { path = "crates/leaf-cron", version = "0.1.0" }
leaf-tx = { path = "crates/leaf-tx", version = "0.1.0" }
leaf-cache = { path = "crates/leaf-cache", version = "0.1.0" }
leaf-validation = { path = "crates/leaf-validation", version = "0.1.0" }
leaf-resilience = { path = "crates/leaf-resilience", version = "0.1.0" }
leaf-i18n = { path = "crates/leaf-i18n", version = "0.1.0" }
leaf-serde = { path = "crates/leaf-serde", version = "0.1.0" }
leaf-figlet = { path = "crates/leaf-figlet", version = "0.1.0" }
leaf-redis = { path = "crates/leaf-redis", version = "0.1.0" }
leaf-starter-redis = { path = "crates/leaf-starter-redis", version = "0.1.0" }
leaf-starter-web = { path = "crates/leaf-starter-web", version = "0.1.0" }
leaf-web = { path = "crates/leaf-web", version = "0.1.0" }
leaf-web-hyper = { path = "crates/leaf-web-hyper", version = "0.1.0" }
leaf = { path = "crates/leaf", version = "0.1.0" }

# External deps (pinned centrally — the internal BOM also covers third-party versions)
indexmap = "2"
smallvec = "1"
once_cell = "1"
futures = "0.3"
linkme = "0.3"
pin-project-lite = "0.2"
tokio = { version = "1", default-features = false }
smol = "2"

# Neutral HTTP value vocabulary + body carrier for the leaf-web abstractions
# (server-agnostic; the hyper backend lives in its own crate).
http = "1"
bytes = "1"

# The HTTP-server BACKEND deps — pinned here but used ONLY by `leaf-web-hyper`, the
# single crate allowed to name hyper/tower/axum (every other crate stays backend-free).
# hyper 1.x = the HTTP/1 server core; hyper-util = the tokio executor + IO glue;
# http-body-util = collect an incoming body / emit a full one at the boundary.
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false }
http-body-util = "0.1"
# The http-body 1.x trait itself (Body/Frame) — the backend reads hyper `Incoming`
# frames (data + trailers) for the inbound stream and IMPLEMENTS a streaming out-body.
http-body = "1"
# A real HTTP client for the backend's integration test (dev-dependency only): GETs/
# POSTs a booted `HyperServer` on an ephemeral port. default-features off = no TLS
# stack (no system OpenSSL): the test only exercises plaintext HTTP/1 on localhost.
reqwest = { version = "0.13", default-features = false }

# Codegen deps (leaf-codegen is a normal lib using proc-macro2/syn/quote so it is
# unit-testable without a compiler; leaf-macros is the thin proc-macro that calls it).
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits", "visit", "visit-mut"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# A PURE serde data format (not a transport backend) for the `Query<T>` extractor:
# it deserializes a `?key=val&..` query string into an arbitrary `Deserialize` target
# and percent-decodes keys+values for free. Allowed in `leaf-web` for the same reason
# `serde_json` backs the JSON converter — it names a wire DATA FORMAT, not an
# HTTP-server (hyper/tower/axum stay confined to `leaf-web-hyper`).
serde_urlencoded = "0.7"
# The object-safety boundary for the leaf-web `HttpMessageConverter` trait: it lets
# the converter be a `dyn` bean (serialize a `&dyn erased_serde::Serialize`, hand back
# a `dyn Deserializer`) without a generic method on the trait object. It is the
# serialization analogue of the `http` neutral-vocabulary exception — NOT a backend.
erased-serde = "0.4"
toml = "0.8"
trybuild = "1"
yaml-rust2 = "0.11"

# Ecosystem integration deps (leaf-redis — the representative binding crate).
# `tokio-comp` wires the async multiplexed connection onto the same tokio runtime
# leaf-tokio installs; default features stay on for the sync `Client`/`Commands`.
redis = { version = "1", features = ["tokio-comp"] }
