[package]
name = "leaf-grpc-build"
version.workspace = true
edition.workspace = true
license.workspace = true

# leaf-grpc-build is the BUILD-HELPER crate — an app's `build.rs` calls
# `leaf_grpc_build::compile(&["proto/x.proto"], &["proto"])`. It names NO leaf-* crate
# (it emits TOKENS that reference `leaf_grpc::…` paths resolved in the APP's compile,
# not here), and NO hyper/h2: only the sanctioned build-time codec deps.
[dependencies]
# protox: pure-Rust .proto -> FileDescriptorSet (no `protoc` binary).
protox.workspace = true
# prost-build: the message-struct generator + the ServiceGenerator seam we hook.
prost-build.workspace = true
# prost-types: the FileDescriptorSet / ServiceDescriptorProto value vocabulary.
prost-types.workspace = true
# prost — re-encodes the per-package FileDescriptorSet to bytes for the <pkg>.fds the
# reflection discovery slice embeds (prost-types' descriptor types derive ::prost::Message).
prost.workspace = true

# NOTE (deviation from plan): current Cargo rejects a crate naming ITSELF as a
# build-dependency (`cyclic package dependency`), so `build.rs` cannot reach this
# crate's own `compile` via a path self-dep. Instead `build.rs` reuses the codegen by
# `include!`-ing the codec pipeline + `src/service_gen.rs` directly and depends on the
# same build-time codec deps the library does — see `build.rs` (added in Task 3.8).
[build-dependencies]
protox.workspace = true
prost-build.workspace = true
prost-types.workspace = true
# prost — the build.rs re-host (Task 1.4) re-encodes each package's FileDescriptorSet to
# bytes for the sibling <pkg>.fds, the same as the library `compile`.
prost.workspace = true

[dev-dependencies]
# Parse-check the rendered service source in unit tests (no compiler-link needed) —
# the descriptor.rs `syn::parse_str::<File>` discipline.
syn = { workspace = true }
# The build-output proof (`tests/generated_service.rs`) includes the generated module
# and exercises the leaf server trait — whose signatures name `leaf_grpc::Streaming`/
# `Status`/`CallShape`/`MethodDescriptor` (Stage 2). Dev-only: the production lib names
# no leaf-* crate. prost (the runtime message codec) backs the generated `#[derive(Message)]`
# structs at TEST compile time.
leaf-grpc = { workspace = true }
prost = { workspace = true }
# The build-output proof decodes the FDS const + the sibling echo.v1.fds as a
# prost_types::FileDescriptorSet (it names `::prost_types` directly).
prost-types = { workspace = true }
