[package]
name = "leaf-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# leaf-grpc is the gRPC ABSTRACTION crate: it rests on leaf-web (the shared
# Request/Response/Body + the ProtocolDispatch seam it implements) and leaf-core
# (BoxFuture/BoxStream/Ref/LeafError). The dep arrow is leaf-grpc -> leaf-web ->
# leaf-core; leaf-web never names leaf-grpc.
leaf-core.workspace = true
leaf-web.workspace = true
# The stereotype macros leaf-grpc dogfoods: GrpcDispatch is PROVIDED as
# dyn ProtocolDispatch by a #[configuration]/#[bean] factory, and
# DefaultGrpcStatusMapper is an #[auto_config] FALLBACK — no hand-rolled Provider,
# exactly like leaf-cache/leaf-web-hyper.
leaf-macros.workspace = true
# prost — the protobuf MESSAGE codec, confined to ProstCodec (the serde_json analogue).
prost.workspace = true
# The body carrier at the frame edge + the neutral HTTP value vocabulary (HeaderMap
# for grpc-status trailers). NO hyper/h2 — only the server-agnostic `http` types.
bytes.workspace = true
http.workspace = true
# BoxStream lives in leaf-core (Stage 1), but leaf-grpc names `futures::Stream` /
# stream combinators directly for Streaming<T> + the de-framing combinators.
futures.workspace = true

[build-dependencies]
# Compile tests/proto/echo.proto -> OUT_DIR (prost messages + the leaf service trait +
# path constants the #[grpc_controller] consumes). protox (pure-Rust) means NO protoc
# system binary. BUILD-ONLY: it never enters the shipped (normal) dep graph.
leaf-grpc-build.workspace = true
# tonic-build is the BUILD-ONLY companion that emits tonic's OWN client stub from the
# SAME echo.proto (the polyglot interop point: leaf's server trait + tonic's client over
# one wire). It names hyper/h2/prost-build at BUILD time only; never a normal dep.
tonic-build.workspace = true
# protox parses echo.proto to a FileDescriptorSet ONCE (pure Rust, NO protoc) so the build
# script can feed the SAME descriptors to tonic-build's `compile_fds` (its client stub) —
# the leaf server trait is generated by `leaf_grpc_build::compile` (which runs protox too).
protox.workspace = true

[dev-dependencies]
# A minimal block_on to drive the async framing/dispatch units + the DI-assembly proof
# with no runtime (the same `futures::executor::block_on` leaf-web's assembly test uses).
futures.workspace = true
# The DI-assembly proof: leaf-boot lifts the macro-emitted #[bean] rows (App::from_slices)
# and runs the #[auto_config] FALLBACK ladder (run_autoconfig) so a test can resolve
# Vec<Ref<dyn GrpcRoute>> / dyn ProtocolDispatch / dyn GrpcStatusMapper by collection +
# by-trait injection — the LAZY freeze→Engine→Injectable path leaf-web's
# tests/dispatch_through_mock.rs uses (no eager validate, no transport). Dev-only:
# production deps stay leaf-core/leaf-web/prost.
leaf-boot.workspace = true
# The tonic INTEGRATION proof (`tests/serves_grpc.rs`) boots the shared hyper WebServer
# in-process (the http2-enabled backend + the JSON converter so HTTP-on-the-same-port
# works) and drives it with a REAL tonic client across all four call shapes. DEV-ONLY:
# leaf-grpc's shipped deps stay leaf-core/leaf-web/leaf-macros/prost.
leaf-tokio.workspace = true
leaf-web-hyper.workspace = true
leaf-serde.workspace = true
prost.workspace = true
# prost-types — the well-known FileDescriptorSet/FileDescriptorProto value types the
# reflected-FDS slice test decodes the collected discovery-slice bytes into (it is a
# transitive dep through prost, but named explicitly so the test resolves `::prost_types`).
prost-types.workspace = true
tonic.workspace = true
http.workspace = true
# The cross-cutting integration test drives the leaf-web Dispatcher across the
# WebFilter chain + the GrpcStatusMapper error model with a tokio runtime; the tonic
# proof boots a real server on a multi-thread runtime + drives the socket (net/time).
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "time"] }
# (leaf-macros/http/bytes are normal deps, available in tests for the filter/proto
#  fakes that dogfood #[async_impl] on WebFilter + the Request/Response shapes.)
