[package]
name = "leaf-i18n"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
leaf-core.workspace = true

[dev-dependencies]
# Tests drive the async MessageSource ABI (BoxFuture seam) to completion with a
# minimal executor — no runtime/network, just `block_on`.
futures.workspace = true
