[package]
name = "leaf-macros"
version.workspace = true
edition.workspace = true
license.workspace = true

# The THIN proc-macro crate (charter §2.10): parse with syn, delegate ALL logic to
# leaf-codegen (a normal, unit-testable library), emit. Tested via INTEGRATION
# tests in `tests/` (separate crates that USE the macros) + trybuild compile-fail.
[lib]
proc-macro = true

[dependencies]
leaf-codegen.workspace = true
syn = { workspace = true }
quote.workspace = true
proc-macro2.workspace = true

# dev-deps: the integration tests are real crates that put the macros on sample
# types and assert the macro->leaf_core roundtrip through the frozen ABI. NOTE the
# DELIBERATE ABSENCE of a `linkme` dep here — that is the proof gate: a crate using
# `#[component]`/`#[bean]`/... needs ONLY leaf-core + leaf-macros. The macros emit
# `#[::leaf_core::linkme::distributed_slice(SLICE)]` + `#[linkme(crate =
# ::leaf_core::linkme)]` so both the attribute macro AND linkme's runtime types
# resolve through leaf-core's `pub use linkme;` re-export. `futures` drives the
# cold async resolution.
[dev-dependencies]
leaf-core.workspace = true
futures.workspace = true
trybuild.workspace = true
