[package]
name = "leaf-resilience"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
leaf-core.workspace = true
leaf-cron.workspace = true
once_cell.workspace = true

[dev-dependencies]
# The integration test drives a REAL annotated bean through Application::run, so it
# needs the boot run-engine + a concrete async facility (the ExecutionFacility /
# ConcurrencyGate + a tokio timer for the backoff sleeper) + the attribute macros,
# plus futures for the unit-test block_on.
leaf-boot.workspace = true
leaf-tokio.workspace = true
leaf-macros.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "sync"] }
