[package]
name = "leaf-starter-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true

# STACK starter — the gRPC bundle. gRPC rides the SHARED hyper WebServer, so this is the
# web stack (the http2-enabled backend + the JSON converter for same-port HTTP) PLUS the
# leaf-grpc engine (Status/framing/dispatch + the GrpcDispatch ProtocolDispatch bean + the
# DefaultGrpcStatusMapper FALLBACK). Each crate's auto-config participates + backs off.
[dependencies]
leaf-grpc.workspace = true
leaf-starter-web.workspace = true
